Adds more filtering refinements (#29)
Signed-off-by: Laird Nelson <ljnelson@gmail.com>